# Graph-Bert

./: .gitignore  pyproject.toml
code/: MethodGraphBertNodeClassification.py
result/GraphBert/: cora_2
result/PreTrained_GraphBert/cora/node_classification_complete_model/: config.json  model.safetensors
src/graph_bert/: __init__.py
