[project]
name = "graph-bert"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.2.2",
    "scipy>=1.13.0",
    "transformers>=4.39.3",
    "scikit-learn>=1.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/graph_bert"]
